fixed buttons in Home on safari

--- a/client/layout.import.less
+++ b/client/layout.import.less
@@ -164,7 +164,10 @@ h4{margin:0;}
 }
 .bottom-box{
   > .react-flex > div {
-    min-width: 50%;
+    box-sizing: border-box;
+    max-width: 50%;
+    min-width: 25%;
+    width:100%;
   }
 }
 .bottom-tabs li a {
